Feat: Add callbacks (early stopping, model checkpoint), BatchNormalization, and Dropout to CNN model

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
+    "from tensorflow.keras.callbacks import ReduceLROnPlateau\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from sklearn.preprocessing import  OrdinalEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv1D, MaxPooling2D, Flatten, Dense\n",
+    "from tensorflow.keras.layers import Conv1D, MaxPooling1D, Flatten, Dense, Dropout, BatchNormalization\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -84,6 +86,47 @@
     "y_train = train['임신 성공 여부']\n",
     "train = train.drop('임신 성공 여부', axis=1)\n",
     "print(len(train.columns), len(test.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "클래스 분포:\n",
+      "임신 성공 여부\n",
+      "0    151978\n",
+      "1     53102\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "클래스 분포(백분율):\n",
+      "임신 성공 여부\n",
+      "0    74.10669\n",
+      "1    25.89331\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# y_train이 pandas Series 형태일 때 (NumPy 배열이면 먼저 pandas로 변환 필요)\n",
+    "y_train_series = pd.Series(y_train)  # 혹은 pd.DataFrame(y_train)으로 사용\n",
+    "\n",
+    "# 클래스의 분포 확인\n",
+    "class_distribution = y_train_series.value_counts()\n",
+    "\n",
+    "# 비율로 확인\n",
+    "class_distribution_percentage = y_train_series.value_counts(normalize=True) * 100\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(\"클래스 분포:\")\n",
+    "print(class_distribution)\n",
+    "\n",
+    "print(\"\\n클래스 분포(백분율):\")\n",
+    "print(class_distribution_percentage)"
    ]
   },
   {
@@ -970,87 +1013,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_9\"\n",
+      "Model: \"sequential_12\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv1d_9 (Conv1D)           (None, 66, 32)            96        \n",
+      " conv1d_15 (Conv1D)          (None, 66, 32)            96        \n",
       "                                                                 \n",
-      " max_pooling1d_6 (MaxPoolin  (None, 33, 32)            0         \n",
-      " g1D)                                                            \n",
+      " batch_normalization (Batch  (None, 66, 32)            128       \n",
+      " Normalization)                                                  \n",
       "                                                                 \n",
-      " conv1d_10 (Conv1D)          (None, 32, 64)            4160      \n",
+      " max_pooling1d_12 (MaxPooli  (None, 33, 32)            0         \n",
+      " ng1D)                                                           \n",
       "                                                                 \n",
-      " max_pooling1d_7 (MaxPoolin  (None, 16, 64)            0         \n",
-      " g1D)                                                            \n",
+      " conv1d_16 (Conv1D)          (None, 32, 64)            4160      \n",
       "                                                                 \n",
-      " flatten_3 (Flatten)         (None, 1024)              0         \n",
+      " batch_normalization_1 (Bat  (None, 32, 64)            256       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 128)               131200    \n",
+      " max_pooling1d_13 (MaxPooli  (None, 16, 64)            0         \n",
+      " ng1D)                                                           \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 1)                 129       \n",
+      " flatten_6 (Flatten)         (None, 1024)              0         \n",
+      "                                                                 \n",
+      " dense_12 (Dense)            (None, 128)               131200    \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_13 (Dense)            (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 135585 (529.63 KB)\n",
-      "Trainable params: 135585 (529.63 KB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
+      "Total params: 135969 (531.13 KB)\n",
+      "Trainable params: 135777 (530.38 KB)\n",
+      "Non-trainable params: 192 (768.00 Byte)\n",
       "_________________________________________________________________\n",
       "Epoch 1/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.4985 - accuracy: 0.7420 - val_loss: 0.4896 - val_accuracy: 0.7463\n",
+      "6409/6409 [==============================] - 24s 4ms/step - loss: 0.5119 - accuracy: 0.7391 - val_loss: 0.4952 - val_accuracy: 0.7440 - lr: 0.0010\n",
       "Epoch 2/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.4931 - accuracy: 0.7440 - val_loss: 0.4899 - val_accuracy: 0.7463\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.5003 - accuracy: 0.7415 - val_loss: 0.4915 - val_accuracy: 0.7455 - lr: 0.0010\n",
       "Epoch 3/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.4919 - accuracy: 0.7434 - val_loss: 0.4877 - val_accuracy: 0.7466\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4980 - accuracy: 0.7420 - val_loss: 0.4901 - val_accuracy: 0.7463 - lr: 0.0010\n",
       "Epoch 4/100\n",
-      "6409/6409 [==============================] - 16s 3ms/step - loss: 0.4909 - accuracy: 0.7448 - val_loss: 0.4898 - val_accuracy: 0.7467\n",
+      "6409/6409 [==============================] - 24s 4ms/step - loss: 0.4960 - accuracy: 0.7426 - val_loss: 0.4909 - val_accuracy: 0.7458 - lr: 0.0010\n",
       "Epoch 5/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.4903 - accuracy: 0.7449 - val_loss: 0.4887 - val_accuracy: 0.7469\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4953 - accuracy: 0.7425 - val_loss: 0.4890 - val_accuracy: 0.7456 - lr: 0.0010\n",
       "Epoch 6/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.4898 - accuracy: 0.7451 - val_loss: 0.4889 - val_accuracy: 0.7468\n",
+      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.4944 - accuracy: 0.7431 - val_loss: 0.4899 - val_accuracy: 0.7456 - lr: 0.0010\n",
       "Epoch 7/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.4895 - accuracy: 0.7452 - val_loss: 0.4881 - val_accuracy: 0.7471\n",
+      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.4942 - accuracy: 0.7429 - val_loss: 0.4885 - val_accuracy: 0.7469 - lr: 0.0010\n",
       "Epoch 8/100\n",
-      "6409/6409 [==============================] - 16s 2ms/step - loss: 0.4889 - accuracy: 0.7455 - val_loss: 0.4874 - val_accuracy: 0.7481\n",
+      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.4940 - accuracy: 0.7433 - val_loss: 0.4893 - val_accuracy: 0.7477 - lr: 0.0010\n",
       "Epoch 9/100\n",
-      "6409/6409 [==============================] - 16s 3ms/step - loss: 0.4887 - accuracy: 0.7458 - val_loss: 0.4886 - val_accuracy: 0.7466\n",
+      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.4938 - accuracy: 0.7432 - val_loss: 0.4880 - val_accuracy: 0.7469 - lr: 0.0010\n",
       "Epoch 10/100\n",
-      "6409/6409 [==============================] - 16s 2ms/step - loss: 0.4883 - accuracy: 0.7458 - val_loss: 0.4888 - val_accuracy: 0.7469\n",
+      "6409/6409 [==============================] - 22s 4ms/step - loss: 0.4934 - accuracy: 0.7432 - val_loss: 0.4884 - val_accuracy: 0.7463 - lr: 0.0010\n",
       "Epoch 11/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.4879 - accuracy: 0.7461 - val_loss: 0.4884 - val_accuracy: 0.7477\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4931 - accuracy: 0.7430 - val_loss: 0.4883 - val_accuracy: 0.7472 - lr: 0.0010\n",
       "Epoch 12/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.4876 - accuracy: 0.7464 - val_loss: 0.4887 - val_accuracy: 0.7475\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4927 - accuracy: 0.7434 - val_loss: 0.4893 - val_accuracy: 0.7478 - lr: 0.0010\n",
       "Epoch 13/100\n",
-      "6409/6409 [==============================] - 15s 2ms/step - loss: 0.4873 - accuracy: 0.7460 - val_loss: 0.4889 - val_accuracy: 0.7470\n",
+      "6409/6409 [==============================] - 25s 4ms/step - loss: 0.4930 - accuracy: 0.7434 - val_loss: 0.4906 - val_accuracy: 0.7440 - lr: 0.0010\n",
       "Epoch 14/100\n",
-      "6409/6409 [==============================] - 16s 2ms/step - loss: 0.4870 - accuracy: 0.7465 - val_loss: 0.4894 - val_accuracy: 0.7466\n",
+      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.4928 - accuracy: 0.7436 - val_loss: 0.4883 - val_accuracy: 0.7464 - lr: 0.0010\n",
       "Epoch 15/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.4867 - accuracy: 0.7467 - val_loss: 0.4893 - val_accuracy: 0.7472\n",
+      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.4907 - accuracy: 0.7442 - val_loss: 0.4877 - val_accuracy: 0.7474 - lr: 5.0000e-04\n",
       "Epoch 16/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.4863 - accuracy: 0.7470 - val_loss: 0.4887 - val_accuracy: 0.7468\n",
+      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.4906 - accuracy: 0.7442 - val_loss: 0.4876 - val_accuracy: 0.7476 - lr: 5.0000e-04\n",
       "Epoch 17/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.4860 - accuracy: 0.7469 - val_loss: 0.4891 - val_accuracy: 0.7469\n",
+      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.4903 - accuracy: 0.7446 - val_loss: 0.4872 - val_accuracy: 0.7468 - lr: 5.0000e-04\n",
       "Epoch 18/100\n",
-      "3956/6409 [=================>............] - ETA: 5s - loss: 0.4850 - accuracy: 0.7473"
+      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.4902 - accuracy: 0.7442 - val_loss: 0.4876 - val_accuracy: 0.7469 - lr: 5.0000e-04\n",
+      "Epoch 19/100\n",
+      "6409/6409 [==============================] - 25s 4ms/step - loss: 0.4902 - accuracy: 0.7443 - val_loss: 0.4874 - val_accuracy: 0.7468 - lr: 5.0000e-04\n",
+      "Epoch 20/100\n",
+      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.4902 - accuracy: 0.7443 - val_loss: 0.4876 - val_accuracy: 0.7470 - lr: 5.0000e-04\n",
+      "Epoch 21/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4901 - accuracy: 0.7447 - val_loss: 0.4870 - val_accuracy: 0.7471 - lr: 5.0000e-04\n",
+      "Epoch 22/100\n",
+      "6409/6409 [==============================] - 28s 4ms/step - loss: 0.4900 - accuracy: 0.7450 - val_loss: 0.4876 - val_accuracy: 0.7473 - lr: 5.0000e-04\n",
+      "Epoch 23/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4898 - accuracy: 0.7444 - val_loss: 0.4895 - val_accuracy: 0.7473 - lr: 5.0000e-04\n",
+      "Epoch 24/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4897 - accuracy: 0.7443 - val_loss: 0.4885 - val_accuracy: 0.7475 - lr: 5.0000e-04\n",
+      "Epoch 25/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4899 - accuracy: 0.7440 - val_loss: 0.4877 - val_accuracy: 0.7463 - lr: 5.0000e-04\n",
+      "Epoch 26/100\n",
+      "6409/6409 [==============================] - 25s 4ms/step - loss: 0.4895 - accuracy: 0.7449 - val_loss: 0.4875 - val_accuracy: 0.7480 - lr: 5.0000e-04\n",
+      "Epoch 27/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4884 - accuracy: 0.7452 - val_loss: 0.4871 - val_accuracy: 0.7472 - lr: 2.5000e-04\n",
+      "Epoch 28/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4882 - accuracy: 0.7453 - val_loss: 0.4871 - val_accuracy: 0.7470 - lr: 2.5000e-04\n",
+      "Epoch 29/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4881 - accuracy: 0.7452 - val_loss: 0.4873 - val_accuracy: 0.7473 - lr: 2.5000e-04\n",
+      "Epoch 30/100\n",
+      "6409/6409 [==============================] - 25s 4ms/step - loss: 0.4879 - accuracy: 0.7456 - val_loss: 0.4871 - val_accuracy: 0.7468 - lr: 2.5000e-04\n",
+      "Epoch 31/100\n",
+      "6409/6409 [==============================] - 23s 4ms/step - loss: 0.4880 - accuracy: 0.7454 - val_loss: 0.4873 - val_accuracy: 0.7468 - lr: 2.5000e-04\n"
      ]
     }
    ],
    "source": [
-    "# 모델 정의\n",
     "model = Sequential()\n",
     "\n",
     "# 첫 번째 Conv1D 계층 (1D 컨볼루션)\n",
     "model.add(Conv1D(32, 2, activation='relu', input_shape=(X_train.shape[1], X_train.shape[2])))\n",
+    "model.add(BatchNormalization())  # BatchNormalization 추가\n",
     "model.add(MaxPooling1D(2))\n",
     "\n",
     "# 두 번째 Conv1D 계층\n",
     "model.add(Conv1D(64, 2, activation='relu'))\n",
+    "model.add(BatchNormalization())  # BatchNormalization 추가\n",
     "model.add(MaxPooling1D(2))\n",
     "\n",
     "# 평탄화\n",
@@ -1058,6 +1136,7 @@
     "\n",
     "# 완전 연결 계층 (Dense)\n",
     "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dropout(0.5))  # Dropout 추가 (50% 비율로 드롭)\n",
     "model.add(Dense(1, activation='sigmoid'))  # 이진 분류 문제이므로 sigmoid 활성화 함수 사용\n",
     "\n",
     "# 모델 컴파일\n",
@@ -1071,30 +1150,56 @@
     "\n",
     "# Early Stopping 도입\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
-    "history = model.fit(X_train, y_train, epochs=100, validation_data=(X_val, y_val), callbacks=[early_stopping])\n"
+    "lr_scheduler = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5, min_lr=1e-6)\n",
+    "history = model.fit(X_train, y_train, epochs=100, validation_data=(X_val, y_val), callbacks=[lr_scheduler, early_stopping])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2815/2815 [==============================] - 2s 816us/step\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = model.predict(X_test_encoded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00762484],\n",
+       "       [0.06929175],\n",
+       "       [0.3650831 ],\n",
+       "       ...,\n",
+       "       [0.00091808],\n",
+       "       [0.0817314 ],\n",
+       "       [0.03970018]], dtype=float32)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,18 +1218,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(90067, 2)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_submission.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(90067,)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred.shape"
    ]
