--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,26 +72,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67 67\n"
+      "67 67\n",
+      "(256351, 67) (256351,)\n"
      ]
     }
    ],
    "source": [
     "y_train = train['임신 성공 여부']\n",
     "train = train.drop('임신 성공 여부', axis=1)\n",
-    "print(len(train.columns), len(test.columns))"
+    "print(len(train.columns), len(test.columns))\n",
+    "print(train.shape, y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +212,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256351, 67)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_encoded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +437,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +693,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +704,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(256351, 67) (256351,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_encoded.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +745,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +997,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1033,7 @@
        "(205080, 30, 1)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,8 +1046,10 @@
     "# X_test_scaled = scaler.transform(filtered_test)\n",
     "\n",
     "# 데이터를 CNN 입력 형태로 변환 (2D 이미지 형태로 reshape)\n",
-    "X_scaled_reshaped = filtered_train.reshape(filtered_train.shape[0], filtered_train.shape[1], 1)\n",
-    "X_test_scaled_reshaped = filtered_test.reshape(filtered_test.shape[0], filtered_test.shape[1], 1)\n",
+    "# DataFrame을 NumPy 배열로 변환하여 reshape\n",
+    "X_scaled_reshaped = filtered_train.values.reshape(filtered_train.shape[0], filtered_train.shape[1], 1)\n",
+    "X_test_scaled_reshaped = filtered_test.values.reshape(filtered_test.shape[0], filtered_test.shape[1], 1)\n",
+    "\n",
     "\n",
     "# 데이터 나누기\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_scaled_reshaped, y_train, test_size=0.2, random_state=42)\n",
@@ -1017,47 +1058,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "(256351, 30, 1) (205080,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_scaled_reshaped.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv1d_4 (Conv1D)           (None, 30, 32)            64        \n",
+      " conv1d (Conv1D)             (None, 30, 32)            64        \n",
       "                                                                 \n",
-      " batch_normalization_5 (Bat  (None, 30, 32)            128       \n",
+      " batch_normalization (Batch  (None, 30, 32)            128       \n",
+      " Normalization)                                                  \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 30, 32)            0         \n",
+      "                                                                 \n",
+      " max_pooling1d (MaxPooling1  (None, 15, 32)            0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv1d_1 (Conv1D)           (None, 15, 64)            2112      \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Bat  (None, 15, 64)            256       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 30, 32)            0         \n",
+      " dropout_1 (Dropout)         (None, 15, 64)            0         \n",
       "                                                                 \n",
-      " max_pooling1d_4 (MaxPoolin  (None, 15, 32)            0         \n",
+      " max_pooling1d_1 (MaxPoolin  (None, 7, 64)             0         \n",
       " g1D)                                                            \n",
       "                                                                 \n",
-      " conv1d_5 (Conv1D)           (None, 15, 64)            2112      \n",
+      " flatten (Flatten)           (None, 448)               0         \n",
       "                                                                 \n",
-      " batch_normalization_6 (Bat  (None, 15, 64)            256       \n",
+      " dense (Dense)               (None, 128)               57472     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Bat  (None, 128)               512       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 15, 64)            0         \n",
+      " dropout_2 (Dropout)         (None, 128)               0         \n",
       "                                                                 \n",
-      " max_pooling1d_5 (MaxPoolin  (None, 7, 64)             0         \n",
-      " g1D)                                                            \n",
-      "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 448)               0         \n",
-      "                                                                 \n",
-      " dense_4 (Dense)             (None, 128)               57472     \n",
-      "                                                                 \n",
-      " batch_normalization_7 (Bat  (None, 128)               512       \n",
-      " chNormalization)                                                \n",
-      "                                                                 \n",
-      " dropout_6 (Dropout)         (None, 128)               0         \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 1)                 129       \n",
+      " dense_1 (Dense)             (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 60673 (237.00 KB)\n",
@@ -1065,43 +1123,31 @@
       "Non-trainable params: 448 (1.75 KB)\n",
       "_________________________________________________________________\n",
       "Epoch 1/100\n",
-      "6409/6409 [==============================] - 20s 3ms/step - loss: 0.5669 - accuracy: 0.7344 - val_loss: 0.5500 - val_accuracy: 0.7434 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5692 - accuracy: 0.7346 - val_loss: 0.5510 - val_accuracy: 0.7440 - lr: 0.0010\n",
       "Epoch 2/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5542 - accuracy: 0.7406 - val_loss: 0.5469 - val_accuracy: 0.7438 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5563 - accuracy: 0.7410 - val_loss: 0.5527 - val_accuracy: 0.7440 - lr: 0.0010\n",
       "Epoch 3/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5524 - accuracy: 0.7409 - val_loss: 0.5453 - val_accuracy: 0.7440 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5550 - accuracy: 0.7410 - val_loss: 0.5486 - val_accuracy: 0.7438 - lr: 0.0010\n",
       "Epoch 4/100\n",
-      "6409/6409 [==============================] - 20s 3ms/step - loss: 0.5511 - accuracy: 0.7409 - val_loss: 0.5460 - val_accuracy: 0.7434 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5541 - accuracy: 0.7409 - val_loss: 0.5486 - val_accuracy: 0.7423 - lr: 0.0010\n",
       "Epoch 5/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5504 - accuracy: 0.7410 - val_loss: 0.5434 - val_accuracy: 0.7437 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5530 - accuracy: 0.7409 - val_loss: 0.5462 - val_accuracy: 0.7435 - lr: 0.0010\n",
       "Epoch 6/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5498 - accuracy: 0.7409 - val_loss: 0.5568 - val_accuracy: 0.7432 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5526 - accuracy: 0.7410 - val_loss: 0.5462 - val_accuracy: 0.7439 - lr: 0.0010\n",
       "Epoch 7/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5493 - accuracy: 0.7410 - val_loss: 0.5436 - val_accuracy: 0.7438 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5523 - accuracy: 0.7410 - val_loss: 0.5447 - val_accuracy: 0.7440 - lr: 0.0010\n",
       "Epoch 8/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5491 - accuracy: 0.7411 - val_loss: 0.5441 - val_accuracy: 0.7435 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5516 - accuracy: 0.7410 - val_loss: 0.5444 - val_accuracy: 0.7440 - lr: 0.0010\n",
       "Epoch 9/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5489 - accuracy: 0.7410 - val_loss: 0.5417 - val_accuracy: 0.7440 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5514 - accuracy: 0.7410 - val_loss: 0.5452 - val_accuracy: 0.7431 - lr: 0.0010\n",
       "Epoch 10/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5482 - accuracy: 0.7410 - val_loss: 0.5425 - val_accuracy: 0.7440 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5509 - accuracy: 0.7410 - val_loss: 0.5457 - val_accuracy: 0.7427 - lr: 0.0010\n",
       "Epoch 11/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5487 - accuracy: 0.7411 - val_loss: 0.5432 - val_accuracy: 0.7440 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.5514 - accuracy: 0.7409 - val_loss: 0.5458 - val_accuracy: 0.7433 - lr: 0.0010\n",
       "Epoch 12/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5482 - accuracy: 0.7411 - val_loss: 0.5421 - val_accuracy: 0.7440 - lr: 0.0010\n",
+      "6409/6409 [==============================] - 24s 4ms/step - loss: 0.5509 - accuracy: 0.7411 - val_loss: 0.5459 - val_accuracy: 0.7439 - lr: 0.0010\n",
       "Epoch 13/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5482 - accuracy: 0.7410 - val_loss: 0.5416 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 14/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5477 - accuracy: 0.7410 - val_loss: 0.5409 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 15/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5476 - accuracy: 0.7411 - val_loss: 0.5414 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 16/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5479 - accuracy: 0.7410 - val_loss: 0.5417 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 17/100\n",
-      "6409/6409 [==============================] - 19s 3ms/step - loss: 0.5475 - accuracy: 0.7409 - val_loss: 0.5419 - val_accuracy: 0.7436 - lr: 0.0010\n",
-      "Epoch 18/100\n",
-      "6409/6409 [==============================] - 20s 3ms/step - loss: 0.5475 - accuracy: 0.7410 - val_loss: 0.5410 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 19/100\n",
-      "6409/6409 [==============================] - 20s 3ms/step - loss: 0.5475 - accuracy: 0.7410 - val_loss: 0.5412 - val_accuracy: 0.7435 - lr: 0.0010\n"
+      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.5506 - accuracy: 0.7410 - val_loss: 0.5445 - val_accuracy: 0.7440 - lr: 0.0010\n"
      ]
     }
    ],
@@ -1147,58 +1193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1603/1603 [==============================] - 1s 665us/step\n"
+      "1603/1603 [==============================] - 1s 676us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.6446027648934243"
+       "0.6368310246352009"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1221,22 +1232,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2815/2815 [==============================] - 2s 652us/step\n"
+      "2815/2815 [==============================] - 2s 668us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.25771257],\n",
-       "       [0.19995667],\n",
-       "       [0.10061908],\n",
+       "array([[0.2662814 ],\n",
+       "       [0.26692525],\n",
+       "       [0.14530332],\n",
        "       ...,\n",
-       "       [0.2698781 ],\n",
-       "       [0.2337817 ],\n",
-       "       [0.19887052]], dtype=float32)"
+       "       [0.33391538],\n",
+       "       [0.18000409],\n",
+       "       [0.27231994]], dtype=float32)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,6 +1275,33 @@
     "# 결과를 새로운 CSV 파일로 저장\n",
     "sample_submission.to_csv('submission.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
