--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -26,8 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('./train.csv').drop(columns=['ID'])\n",
-    "test = pd.read_csv('./test.csv').drop(columns=['ID'])"
+    "# train = pd.read_csv('./train.csv').drop(columns=['ID'])\n",
+    "# test = pd.read_csv('./test.csv').drop(columns=['ID'])\n",
+    "\n",
+    "train = pd.read_csv('./train_encoded.csv')\n",
+    "test = pd.read_csv('./test_encoded.csv')"
    ]
   },
   {
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1024,16 +1027,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(205080, 30, 1)"
+       "(205080, 67, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,9 +1050,11 @@
     "\n",
     "# 데이터를 CNN 입력 형태로 변환 (2D 이미지 형태로 reshape)\n",
     "# DataFrame을 NumPy 배열로 변환하여 reshape\n",
-    "X_scaled_reshaped = filtered_train.values.reshape(filtered_train.shape[0], filtered_train.shape[1], 1)\n",
-    "X_test_scaled_reshaped = filtered_test.values.reshape(filtered_test.shape[0], filtered_test.shape[1], 1)\n",
+    "X_scaled_reshaped = train.values.reshape(train.shape[0], train.shape[1], 1)\n",
+    "X_test_scaled_reshaped = test.values.reshape(test.shape[0], test.shape[1], 1)\n",
     "\n",
+    "# 아래 컬럼들에 있는 스트링값 처리하기.\n",
+    "ohe_cols = ['시술 시기 코드', '특정 시술 유형', 'DI 임신 횟수', 'IVF 출산 횟수', 'DI 출산 횟수', '난자 출처', '정자 출처']\n",
     "\n",
     "# 데이터 나누기\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_scaled_reshaped, y_train, test_size=0.2, random_state=42)\n",
@@ -1058,96 +1063,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(256351, 30, 1) (205080,)\n"
+      "(205080, 67, 1) (205080,)\n"
      ]
     }
    ],
    "source": [
-    "print(X_scaled_reshaped.shape, y_train.shape)"
+    "print(X_train.shape, y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv1d (Conv1D)             (None, 30, 32)            64        \n",
+      " conv1d_2 (Conv1D)           (None, 67, 32)            64        \n",
       "                                                                 \n",
-      " batch_normalization (Batch  (None, 30, 32)            128       \n",
-      " Normalization)                                                  \n",
-      "                                                                 \n",
-      " dropout (Dropout)           (None, 30, 32)            0         \n",
-      "                                                                 \n",
-      " max_pooling1d (MaxPooling1  (None, 15, 32)            0         \n",
-      " D)                                                              \n",
-      "                                                                 \n",
-      " conv1d_1 (Conv1D)           (None, 15, 64)            2112      \n",
-      "                                                                 \n",
-      " batch_normalization_1 (Bat  (None, 15, 64)            256       \n",
+      " batch_normalization_3 (Bat  (None, 67, 32)            128       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 15, 64)            0         \n",
+      " dropout_3 (Dropout)         (None, 67, 32)            0         \n",
       "                                                                 \n",
-      " max_pooling1d_1 (MaxPoolin  (None, 7, 64)             0         \n",
+      " max_pooling1d_2 (MaxPoolin  (None, 33, 32)            0         \n",
       " g1D)                                                            \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 448)               0         \n",
+      " conv1d_3 (Conv1D)           (None, 33, 64)            2112      \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               57472     \n",
-      "                                                                 \n",
-      " batch_normalization_2 (Bat  (None, 128)               512       \n",
+      " batch_normalization_4 (Bat  (None, 33, 64)            256       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 128)               0         \n",
+      " dropout_4 (Dropout)         (None, 33, 64)            0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 1)                 129       \n",
+      " max_pooling1d_3 (MaxPoolin  (None, 16, 64)            0         \n",
+      " g1D)                                                            \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 1024)              0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 128)               131200    \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Bat  (None, 128)               512       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 60673 (237.00 KB)\n",
-      "Trainable params: 60225 (235.25 KB)\n",
+      "Total params: 134401 (525.00 KB)\n",
+      "Trainable params: 133953 (523.25 KB)\n",
       "Non-trainable params: 448 (1.75 KB)\n",
-      "_________________________________________________________________\n",
-      "Epoch 1/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5692 - accuracy: 0.7346 - val_loss: 0.5510 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 2/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5563 - accuracy: 0.7410 - val_loss: 0.5527 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 3/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5550 - accuracy: 0.7410 - val_loss: 0.5486 - val_accuracy: 0.7438 - lr: 0.0010\n",
-      "Epoch 4/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5541 - accuracy: 0.7409 - val_loss: 0.5486 - val_accuracy: 0.7423 - lr: 0.0010\n",
-      "Epoch 5/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5530 - accuracy: 0.7409 - val_loss: 0.5462 - val_accuracy: 0.7435 - lr: 0.0010\n",
-      "Epoch 6/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5526 - accuracy: 0.7410 - val_loss: 0.5462 - val_accuracy: 0.7439 - lr: 0.0010\n",
-      "Epoch 7/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5523 - accuracy: 0.7410 - val_loss: 0.5447 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 8/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5516 - accuracy: 0.7410 - val_loss: 0.5444 - val_accuracy: 0.7440 - lr: 0.0010\n",
-      "Epoch 9/100\n",
-      "6409/6409 [==============================] - 17s 3ms/step - loss: 0.5514 - accuracy: 0.7410 - val_loss: 0.5452 - val_accuracy: 0.7431 - lr: 0.0010\n",
-      "Epoch 10/100\n",
-      "6409/6409 [==============================] - 18s 3ms/step - loss: 0.5509 - accuracy: 0.7410 - val_loss: 0.5457 - val_accuracy: 0.7427 - lr: 0.0010\n",
-      "Epoch 11/100\n",
-      "6409/6409 [==============================] - 21s 3ms/step - loss: 0.5514 - accuracy: 0.7409 - val_loss: 0.5458 - val_accuracy: 0.7433 - lr: 0.0010\n",
-      "Epoch 12/100\n",
-      "6409/6409 [==============================] - 24s 4ms/step - loss: 0.5509 - accuracy: 0.7411 - val_loss: 0.5459 - val_accuracy: 0.7439 - lr: 0.0010\n",
-      "Epoch 13/100\n",
-      "6409/6409 [==============================] - 22s 3ms/step - loss: 0.5506 - accuracy: 0.7410 - val_loss: 0.5445 - val_accuracy: 0.7440 - lr: 0.0010\n"
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type float).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 37\u001b[0m\n\u001b[1;32m     35\u001b[0m early_stopping \u001b[38;5;241m=\u001b[39m EarlyStopping(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, restore_best_weights\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     36\u001b[0m lr_scheduler \u001b[38;5;241m=\u001b[39m ReduceLROnPlateau(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, min_lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m)\n\u001b[0;32m---> 37\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mX_val\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_val\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mlr_scheduler\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mearly_stopping\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/tf-env/lib/python3.8/site-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/tf-env/lib/python3.8/site-packages/tensorflow/python/framework/constant_op.py:98\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[0;34m(value, ctx, dtype)\u001b[0m\n\u001b[1;32m     96\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m dtypes\u001b[38;5;241m.\u001b[39mas_dtype(dtype)\u001b[38;5;241m.\u001b[39mas_datatype_enum\n\u001b[1;32m     97\u001b[0m ctx\u001b[38;5;241m.\u001b[39mensure_initialized()\n\u001b[0;32m---> 98\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mEagerTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type float)."
      ]
     }
    ],
