Feat: Add code for checking std_auc in ascending order

--- a/Minseok_random_state.ipynb
+++ b/Minseok_random_state.ipynb
@@ -1727,10 +1727,41 @@
     "results_df = results_df.sort_values(by=\"mean_auc\", ascending=False)\n",
     "\n",
     "# 결과 데이터프레임 출력\n",
-    "print(results_df)\n",
+    "print(results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   random_state  mean_auc   std_auc\n",
+      "85           86  0.740085  0.000104\n",
+      "44           45  0.740132  0.000366\n",
+      "13           14  0.740123  0.000556\n",
+      "51           52  0.740213  0.000682\n",
+      "89           90  0.740222  0.000683\n",
+      "..          ...       ...       ...\n",
+      "34           35  0.739982  0.003366\n",
+      "4             5  0.739929  0.003426\n",
+      "93           94  0.739900  0.003573\n",
+      "67           68  0.740149  0.003628\n",
+      "3             4  0.739905  0.003899\n",
+      "\n",
+      "[99 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean_auc 값으로 내림차순 정렬\n",
+    "results_df = results_df.sort_values(by=\"std_auc\", ascending=True)\n",
     "\n",
-    "# 결과 데이터프레임을 CSV 파일로 저장\n",
-    "results_df.to_csv(\"cv_results.csv\", index=False)"
+    "# 결과 데이터프레임 출력\n",
+    "print(results_df)"
    ]
   },
   {
